Add a "Show archived tasks" link on task lists in on the index

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -86,15 +86,6 @@ div.column
 .task_list_container
   margin: 10px 0 20px
 
-.new_task
-  font-size: 11px
-  :padding
-    top: 10px
-    left: 50px
-  a
-    color: rgb(100,100,100)
-    text-decoration: underline
-
 .task_list_container.reordering
   th
     border: none
@@ -267,6 +258,23 @@ table.task_list_closed
   a.name
     text-decoration: line-through
     color: #999
+
+.new_task
+  font-size: 11px
+  :padding
+    top: 10px
+    left: 50px
+  a
+    color: rgb(100,100,100)
+    text-decoration: underline
+
+.show_archived_tasks
+  font-size: 11px
+  :padding
+    top: 10px
+    left: 50px
+  a
+    color: #CCC
 
 span.task_status, span.current_task_status
   padding: 0 3px
