--- a/app/views/task_lists/_task_list.html.haml
+++ b/app/views/task_lists/_task_list.html.haml
@@ -2,7 +2,7 @@
 - header_on_index = @on_index || (action_name == 'index')
 - show_the_lists = !(header_on_index and task_list.archived)
 .task_list_container{ :id => task_list_id(nil,project,task_list), :class => (task_list.archived ? 'archived' : nil) }
-  .task_list{ :id => task_list_id(:with_main_tasks,project,task_list) }
+  .task_list{ :id => task_list_id(:with_main_tasks,project,task_list), :action_url => project_task_list_path(project,task_list) }
     .head{:id => task_list_id(:header_index,project,task_list) }
       = task_list_index_header(project,task_list)
     - if !header_on_index
@@ -22,3 +22,8 @@
         %div{ :id => task_list_id(:the_closed_tasks,project,task_list), :class => 'tasks closed' }
           - if !header_on_index
             = list_tasks(task_list.tasks.archived,task_list_editable?(task_list,current_user))
+        - if header_on_index and task_list.tasks.archived.size > 0
+          .show_archived_tasks
+            = loading_image(task_list_id(:archived_tasks_loading,project,task_list))
+            = show_archived_tasks_link(project,task_list)
+    
