--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -16,7 +16,7 @@ form
     margin-bottom: 10px
     label
       +label-styles
-    input
+    input, textarea
       font-size: 16px
       padding: 5px
       border:
@@ -24,6 +24,8 @@ form
         left: solid 1px rgb(233, 233, 233)
         bottom: solid 1px rgb(233, 233, 233)
         right: solid 1px rgb(196, 196, 196)
+    textarea
+      width: 538px
     .label
       display: block
       margin:
@@ -37,14 +39,6 @@ form
         margin-left: 5px
         font-size: 10px
         color: rgb(150, 150, 150)
-    textarea
-      font-size: 16px
-      padding: 5px
-      border:
-        top: solid 1px rgb(196, 196, 196)
-        left: solid 1px rgb(233, 233, 233)
-        bottom: solid 1px rgb(233, 233, 233)
-        right: solid 1px rgb(196, 196, 196)
 
   .select
     label
@@ -89,7 +83,7 @@ form
     text-decoration: underline
 
 form.app_form
-  :background rgb(255,255,220)
-  :border 1px solid rgb(200,200,120)
-  :padding 20px
-  :margin-bottom 15px
+  background: rgb(255,255,220)
+  border: 1px solid rgb(200,200,120)
+  padding: 20px
+  margin-bottom: 15px
