Always show and allow "Convert to task". Also add explanation text when comments can no longer be edited

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -6,7 +6,7 @@
       .actions_menu
         %span.actiondate= posted_date comment.created_at
         %span.loading{:style => 'display:none'}= "Loading..."
-        - if comment.can_edit?(current_user)
+        - if comment.can_edit?(current_user, false)
           = image_tag('triangle.png', :class => 'triangle')
           .extra
             - if comment.target.class == Project
@@ -15,6 +15,8 @@
               = edit_comment_link(comment)
             - if comment.can_destroy?(current_user)
               = delete_comment_link(comment)
+            .tactione{:style => (comment.can_edit?(current_user) ? 'display:none' : nil)}
+              = t('.cannot_edit')
       .name
         = conversation_last_comment_text(comment)
         = activity_comment_user_link(comment)
