--- a/app/styles/_actions_menu.sass
+++ b/app/styles/_actions_menu.sass
@@ -34,6 +34,9 @@
         background: #78ACD7
         text-decoration: none
         cursor: pointer
+    .tactione
+      color: #ccc
+      padding: 3px 5px
 
 .actions_menu.loading
   &:hover
