Improve archived task styles

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -221,6 +221,9 @@ div.column
         background: none
         display: inline
 
+div.tasks
+  :padding-top 3px
+
 table.task_list_closed
   margin-top: 10px
   .tasks
@@ -271,7 +274,7 @@ table.task_list_closed
 .show_archived_tasks
   font-size: 11px
   :padding
-    top: 10px
+    top: 6px
     left: 50px
   a
     color: #CCC
