--- a/app/views/task_lists/_fields.m.haml
+++ b/app/views/task_lists/_fields.m.haml
@@ -1,4 +1,4 @@
 %p= t('.task_list')
 .name.text_field
   = f.label :name, t('.name')
-  = f.text_field :name, :class => 'focus', :autofocus => 'true'
+  = f.text_field :name, :autofocus => true
