--- a/app/views/notes/_fields.haml
+++ b/app/views/notes/_fields.haml
@@ -2,7 +2,7 @@
   = formatting_documentation_link
 .name.text_field
   = f.label :name, t('.title'), :size => 74
-  = f.text_field :name, :class => 'focus'
+  = f.text_field :name
 .body.text_area
   = f.label :body, t('.body')
   = f.text_area :body, :id => :note_body
