--- a/app/views/task_lists/_fields.html.haml
+++ b/app/views/task_lists/_fields.html.haml
@@ -2,7 +2,7 @@
 %p= t('.task_list')
 .name.text_field
   = f.label :name, t('.name')
-  = f.text_field :name, :class => 'focus', :autofocus => 'true'
+  = f.text_field :name, :autofocus => true
 %p.optional= t('.optional')
 .pick_date
   = f.label :start_on, t('.start_on')
