--- a/app/views/task_lists/_title_edit_form.haml
+++ b/app/views/task_lists/_title_edit_form.haml
@@ -2,5 +2,5 @@
   = hidden_field_tag("on_index", "1") if @on_index
   .name.text_field
     = f.label :name, t('task_lists.fields.name')
-    = f.text_field :name, :class => 'focus', :autofocus => 'true'
+    = f.text_field :name, :autofocus => true
   = task_list_submit(project,task_list)
