--- a/app/views/task_lists/_title_edit_form.haml
+++ b/app/views/task_lists/_title_edit_form.haml
@@ -1,6 +1,3 @@
 - task_list_form_for(project,task_list) do |f|
-  = hidden_field_tag("on_index", "1") if @on_index
-  .name.text_field
-    = f.label :name, t('task_lists.fields.name')
-    = f.text_field :name, :autofocus => true
+  = task_list_title_fields(f,project,task_list)
   = task_list_submit(project,task_list)
