--- a/app/views/task_lists/index.m.haml
+++ b/app/views/task_lists/index.m.haml
@@ -1,13 +1,17 @@
 #page
-  #task_lists
-    .task_list
-      = link_to t('task_lists.link.new'), new_project_task_list_path(@current_project), :class => 'new'
-    - for task_list in @task_lists
-      .task_list
-        .title
-          = link_to task_list, project_task_list_path(@current_project, task_list)
-        .tasks
-          - for task in task_list.tasks.unarchived
-            = link_to task, project_task_list_task_path(@current_project, task_list, task)
-        .new
-          = link_to t('tasks.link.new'), new_project_task_list_task_path(@current_project, task_list), :class => 'new'
+  - if @current_project
+    %h2= t('.tasks_for_project')
+    
+    - if @current_project.editable?(current_user)
+      = task_list_form(@current_project,TaskList.new)
+    
+    #task_lists{:reorder_url => project_reorder_task_lists_path(@current_project)}
+      = render_task_lists(@current_project,@task_lists,@sub_action)
+    
+    .new
+      = link_to t('task_lists.link.new'), new_project_task_list_path(@current_project, @task_list), :class => 'new'
+  - else
+    %h2= t('.tasks_for_all_projects')
+    
+    #tasks_for_all_projects{}
+      = tasks_for_all_projects(@tasks)
