Improve the buttons on the top and the "new task list" button

--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -105,7 +105,7 @@ h2
         weight: bold
       height: 22px
       line-height: 20px
-      width: 18%
+      width: 30%
       margin:
         left: 2%
         top: 2px
@@ -145,6 +145,17 @@ h2
         font-size: 16px
         display: block
         border-bottom: 1px solid #dddddd
+        a
+          color: #3b5998
+          text-decoration: none
+          display: block
+          padding: 10px
+        a.new
+          color: #555555
+    #task_lists
+      div.new
+        font-size: 16px
+        display: block
         a
           color: #3b5998
           text-decoration: none
