Improve the people section on the mobile view

--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -152,6 +152,26 @@ h2
           padding: 10px
         a.new
           color: #555555
+    #people
+      div.person
+        padding: 10px
+        div.thumb_avatar
+          float: left
+          width: 48px
+          height: 48px
+          margin-right: 10px
+        .person_header
+          float: left
+          .name
+            p
+              margin: 0.25em 0em
+        h2
+          padding: 0px
+          margin: 0px
+          font-size: 12px
+          a
+            padding: 0px
+            font-size: 16px
     #task_lists
       div.new
         font-size: 16px
