Add back in the invites and the form on the people page

--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -172,6 +172,20 @@ h2
           a
             padding: 0px
             font-size: 16px
+    div.invitation
+      div.new_user_avatar
+        float: left
+        width: 48px
+        height: 48px
+        margin-right: 10px
+        background: rgb(200, 240, 200)
+        p
+          color: rgb(150, 190, 150)
+          font-size: 24px
+          margin:
+            left: 15px
+            top: 7px
+        
     #task_lists
       div.new
         font-size: 16px
