--- a/app/views/people/index.m.haml
+++ b/app/views/people/index.m.haml
@@ -1,3 +1,6 @@
+
 #page
-  #people.people
+  = invite_form(@current_project,Invitation.new)
+  #people
+    = list_invitations_for_project(@current_project,@invitations)
     = list_people(@current_project,@people)
