fix displaying of images in facebox

--- a/app/styles/_facebox.sass
+++ b/app/styles/_facebox.sass
@@ -57,6 +57,7 @@
       width: auto
       img
         display: block
+        margin: 0 auto
     &.loading
       color: #555
       .facebox-content
