take care if comment is editable or destructable when caching

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,4 +1,4 @@
-- cache comment do
+- cache_editable_comment comment do
   .comment{:id => "comment_#{comment.id}", :immutable_at => datetime_ms(comment.created_at + 15.minutes) }
     .info
       = thumb_avatar(comment.user)
