--- a/app/views/comments/_new.haml
+++ b/app/views/comments/_new.haml
@@ -1,12 +1,12 @@
-- comment_form_for(form_url) do |f|
+- form_for form_url, :html => {:update_id => js_id(nil,Comment.new), :multipart => true, :method => :post} do |f|
   .body.text_area
     = comment_text_area(f, target)
     #comment_body_list.autocomplete{:style => 'display:none'}
     .previewBox.textilized{:style => 'display:none'}
   .extra
     - if comment.project
-      = the_comment_upload_link(comment)
-      = upload_area(comment)
+      = link_to content_tag(:span, t('uploads.comment_upload_link')), new_project_upload_path(comment.project), :class => 'add_button', :id => 'comment_upload_link'
+      = render 'uploads/upload_area', :comment => comment, :form => f
     - if target
       = last_comment_input
       - if target.is_a?(Task)
@@ -32,8 +32,6 @@
           .status.rejected#status_rejected
             = f.radio_button :status, Task::STATUSES[:rejected]
             = t('tasks.status.rejected')
-          = javascript_tag "$$('.statuses input').each(function(e){ if (e.checked) { e.up('.status').addClassName('active') }; })"
-          = javascript_tag "Comment.watch_status();"
     .submit{ :id => js_id(:new_submit,Comment.new) }
       = hidden_field_tag :original_controller, controller_name
       %span.showPreview
