--- a/app/views/emailer/_upload.haml
+++ b/app/views/emailer/_upload.haml
@@ -1,6 +1,6 @@
 %li
   = t('.file')
-  = upload_link(@project,upload)
+  = link_to_upload(upload, upload.file_name)
   = t('.uploaded_by')
   = link_to upload.user.name, user_url(upload.user)
   - if upload.description
