--- a/app/views/activities/_create_upload.haml
+++ b/app/views/activities/_create_upload.haml
@@ -1,14 +1,1 @@
-.upload{ :id => "upload_#{upload.id}" }
-  .info
-    = link_to upload.file_type, upload.url, :class => upload.file_type
-  .block
-    .filename.show_details
-      - unless rss?
-        .date= posted_date upload.created_at
-      %p.name
-        = activity_title(activity)
-        = activity_project_link(activity.project)
-      .body  
-        = upload_link(upload.project, upload)
-        = number_to_human_size(upload.size)
-  .clear
+= render 'uploads/upload', :object => upload, :activity => true
