--- a/app/views/pages/_buttons.haml
+++ b/app/views/pages/_buttons.haml
@@ -1,5 +1,5 @@
 .buttons#buttons
-  = new_page_note_link(project,page)
-  = new_page_divider_link(project,page)
-  = new_page_upload_link(project,page,false)
-  .clear
+  = new_page_note_link(project, page)
+  = new_page_divider_link(project, page)
+  - unless request.format == :m
+    = link_to "<span>#{t('.new_upload')}</span>", new_project_page_upload_path(project, page), :class => 'add_button upload_button'
