--- a/app/views/uploads/_form.haml
+++ b/app/views/uploads/_form.haml
@@ -1,4 +1,6 @@
--upload_form_for(project,upload) do |f|
+- hidden = page || (action_name == 'index' && upload.errors.empty?)
+
+- form_for [project, upload], :html => { :multipart => true, :style => hidden ? 'display: none' : nil, :class => "upload_form app_form #{'form_error' unless upload.errors.empty?}" } do |f|
   .description.text_field
     = f.label :description, t('.description')
     = f.text_field :description
@@ -12,4 +14,7 @@
         - if upload.asset.errors.has_key?(:size)
           %span=t('.max_size',:mb => upload.asset.errors[:size][:max])
   .submit
+    - if page
+      = page_slot_fields
+      = f.hidden_field :page_id
     = submit_tag t('.upload')
