Removing My Tasks from Project#index, adding My Task count to global navigation
Now you'll see on top a counter of your tasks.
This will take you to the All Tasks page.

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -19,17 +19,18 @@
     .status, .last_login
       float: right
       color: #777777
-  .project_list, .archived_project_list
+  .project_list
     margin-top: 15px
     font-size: 12px
     .project_link
       margin: 1px 0 2px 0
-      .unread_comment_count
-        float: right
-        font-weight: normal
     .new_project_link
       a
         color: rgb(150, 150, 150)
+  .archived_project_list
+    .project_link
+      margin: 10px 5px
+  
   #project_archived_link
     color: #999999
     font-size: 12px
