--- a/app/views/shared/_archived_projects.haml
+++ b/app/views/shared/_archived_projects.haml
@@ -1,3 +1,3 @@
-.archived_project_list{ :style => 'display: none' }
+.archived_project_list
   %h2= t('.archived_projects')
   = render :partial => 'projects/project', :collection => projects
