--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -8,6 +8,12 @@
   -moz-border-radius-topright: $n
   -webkit-border-top-left-radius: $n
   -webkit-border-top-right-radius: $n
+=rounded-bottom($n)
+  border-radius: $n $n 0 0
+  -moz-border-radius-bottomleft: $n
+  -moz-border-radius-bottomright: $n
+  -webkit-border-bottom-left-radius: $n
+  -webkit-border-bottom-right-radius: $n
 =box-shadow($params)
   box-shadow: $params
   -webkit-box-shadow: $params
