--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -13,7 +13,9 @@ if logged_in?
       end
     end
     
-    add_tab({:html => {:id => 'projects_tab', 
+    add_tab({:html => {:id => 'projects_tab',
+                       :class => 'nav_tab',
+                       :li_class => 'nav_tab_container',
 	                   :li_end => projects_tab_list(current_user.projects.unarchived)}
 	}) do |t|
       t.named "#{t('.all_projects')} #{image_tag('triangle.png', :class => 'triangle')}"
