--- a/app/views/users/_form.haml
+++ b/app/views/users/_form.haml
@@ -74,26 +74,25 @@
   = list_card_fields(f,%w(phone_numbers email_addresses websites addresses ims social_networks))
 
 - if @sub_action == 'picture'
-  %p= t('.avatar.we_have_this_avatar')
+  %p= t(user.avatar?? '.avatar.we_have_this_avatar' : '.avatar.gravatar_in_use', :gravatar => gravatar_url)
   %p
-    = image_tag current_user.avatar_or_gravatar_url(:profile)
-    = image_tag current_user.avatar_or_gravatar_url(:thumb)
-    = image_tag current_user.avatar_or_gravatar_url(:micro)
-  %p= t('.avatar.upload_here_or_at_gravatar')
-  = f.label :avatar, t('.avatar.field')
-  = f.file_field :avatar
-  - unless current_user.avatar.errors.empty?
+    = image_tag avatar_or_gravatar(user, :profile)
+    = image_tag avatar_or_gravatar(user, :thumb)
+    = image_tag avatar_or_gravatar(user, :micro)
+  %p= t('.avatar.upload_here_or_at_gravatar', :gravatar => gravatar_url)
+  %p
+    = f.label :avatar, t('.avatar.field')
+    = f.file_field :avatar
+  - if user.avatar?
     %p
-      - if current_user.avatar.errors.has_key?(:presence)
-        %span=t('.avatar.presence')
-      - if current_user.avatar.errors.has_key?(:size)
-        %span=t('.avatar.max_size',:mb => current_user.avatar.errors[:size][:max])
+      = f.label :avatar_destroy, t('.avatar.destroy')
+      = f.check_box :avatar_destroy
 
 - if @sub_action == 'notifications'
   .check_boxes.notifications
     .check_box.notify
       = f.check_box :notify_mentions
-      = f.label :notify_mentions, t('.notify_mentions', :login => current_user.login)
+      = f.label :notify_mentions, t('.notify_mentions', :login => user.login)
     .check_box.notify
       = f.check_box :notify_conversations
       = f.label :notify_conversations, t('.notify_conversations')
