Improve the pages dropdown

--- a/app/views/shared/_pages_dropdown.haml
+++ b/app/views/shared/_pages_dropdown.haml
@@ -2,3 +2,5 @@
   - pages.each do |page|
     %li
       = link_to(truncate(page.name, :length => 30), project_page_url(project,page), :class => 'tab_item')
+  %li
+    = link_to("+ #{t('pages.column.new_page')}", new_project_page_url(project), :class => 'tab_action')
