--- a/app/styles/_navigation.sass
+++ b/app/styles/_navigation.sass
@@ -85,7 +85,7 @@ div.project_navigation
       margin-bottom: 0px
       font-size: 12px
       text-shadow: #afd0ec 0px 1px 0px
-      +rounded(5px)
+      +rounded-top(5px)
     a:hover
       color: rgb(0, 0, 0)
       text-decoration: underline
@@ -174,6 +174,11 @@ ul.nav_tab_list
     a.tab_item
       padding: 5px 5px
       width: 220px
+    a.tab_action
+      padding: 5px 5px
+      width: 220px
+      color: rgb(150, 150, 150)
+      text-shadow: none
     .quicklinks
       float: right
       padding: 3px 0px
@@ -188,7 +193,6 @@ li.nav_tab_container
   a.nav_tab
     display: block
     float: none
-    +rounded-bottom(0)
   ul
     float: left
     position: absolute
