--- a/app/views/activities/_create_person.haml
+++ b/app/views/activities/_create_person.haml
@@ -5,6 +5,7 @@
   = link_to activity.project, activity.project unless location_name?('show_projects')
   = #t(".by")
   = #link_to activity.user, user_path(activity.user)
-  .date
-    = posted_date activity.posted_date
+  - unless rendering_rss?
+    .date
+      = posted_date activity.posted_date
   .clear
