--- a/app/views/activities/_create_task.haml
+++ b/app/views/activities/_create_task.haml
@@ -6,6 +6,7 @@
   = link_to task.task_list, project_task_list_path(task.task_list.project, task.task_list)
   &rarr;
   = link_to task, project_task_list_task_path(task.task_list.project, task.task_list, task)
-  .date
-    = posted_date activity.posted_date
+  - unless rendering_rss?
+    .date
+      = posted_date activity.posted_date
   .clear
