--- a/app/views/activities/_create_task_list.haml
+++ b/app/views/activities/_create_task_list.haml
@@ -4,6 +4,7 @@
   = t(".#{activity.action_type}")
   = activity_project_link(activity.project,:after)
   = link_to task_list, project_task_list_path(task_list.project, task_list)
-  .date
-    = posted_date activity.posted_date
+  - unless rendering_rss?
+    .date
+      = posted_date activity.posted_date
   .clear
