--- a/app/views/activities/_edit_page.haml
+++ b/app/views/activities/_edit_page.haml
@@ -5,6 +5,7 @@
   = t(".#{activity.action_type}")
   = activity_project_link(activity.project,:after) unless location_name?('show_projects')
   = link_to page, project_page_path(page.project, page)
-  .date
-    = posted_date activity.posted_date
+  - unless rendering_rss?
+    .date
+      = posted_date activity.posted_date
   .clear
