fix and refactor fyi tooltips. delete unnecessary "fyi" plugin

--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -49,9 +49,10 @@
 
 .fyi
   position: absolute
-  background: rgb(255, 255, 255)
-  border: solid 4px rgb(220, 220, 220)
+  background: white
+  border: solid 4px #ddd
   font-size: 12px
+  margin: 0
   padding: 5px
   +rounded(4px)
   width: 300px
