Remove text shadow when the navigation dropdown is showing.

--- a/app/styles/_navigation.sass
+++ b/app/styles/_navigation.sass
@@ -201,6 +201,8 @@ li.nav_tab_container
     border: 2px solid #cccccc
     display: none
   &:hover
+    a
+      text-shadow: none
     #projects_tab,#pages_tab
       background-color: #cccccc
     ul
