--- a/app/views/tasks/_assigned.haml
+++ b/app/views/tasks/_assigned.haml
@@ -1,3 +1,3 @@
 %span.assignment#assigned
   - if task.assigned?
-    = t('.assigned_to', :user => link_to(task.assigned.user.name, user_path(user)))
+    = t('.assigned_to', :user => link_to(task.assigned.user.name, task.assigned.user))
