--- a/app/views/avatars/_thumb_avatar.haml
+++ b/app/views/avatars/_thumb_avatar.haml
@@ -1,2 +1,2 @@
-.thumb_avatar{ :style => "background: url(#{user.avatar_or_gravatar_url(:thumb)}) no-repeat;" }
+.thumb_avatar{ :style => "background: url(#{avatar_or_gravatar(user, :thumb)}) no-repeat;" }
   %a{ :href => "#{user_path(user)}", :class => (round_corners ? 'round_corners' : '') }
