Fix .page == nil bug. FIXME: we need to improve activities!

--- a/app/views/activities/_create_divider.haml
+++ b/app/views/activities/_create_divider.haml
@@ -4,7 +4,8 @@
     = activity.user.name
   = t(".#{activity.action_type}")
   = activity_project_link(activity.project,:after) unless location_name?('show_projects')
-  = link_to divider.page, project_page_path(divider.page.project, divider.page)
+  - target_page = Page.find_with_deleted(divider.page_id)
+  = link_to target_page, (target_page.deleted? ? '#' : project_page_path(activity.project, target_page))
   &rarr;
   = divider
   - unless rendering_rss?
