--- a/app/views/activities/_create_page.haml
+++ b/app/views/activities/_create_page.haml
@@ -4,7 +4,7 @@
     = activity.user.name
   = t(".#{activity.action_type}")
   = activity_project_link(activity.project,:after) unless location_name?('show_projects')
-  = link_to page, project_page_path(page.project, page)
+  = link_to page, (page.deleted? ? '#' : project_page_path(page.project, page))
   - unless rendering_rss?
     .date
       = posted_date activity.posted_date
