even friendlier hours display

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -211,8 +211,8 @@ form.convert_comment
     color: white
     text-align: center
     background-color: #668cd9
-    -webkit-border-radius: 3px
-    -moz-border-radius: 3px
+    +rounded(3px)
+    padding: 0 3px
     img
       margin-top: 6px
   span.author, span.project
