--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -3,20 +3,21 @@
     .info
       = thumb_avatar(comment.user)
     .block
-      .actions_menu
-        %span.actiondate= posted_date comment.created_at
-        %span.loading{:style => 'display:none'}= "Loading..."
-        - if comment.can_modify?(current_user, false)
-          = image_tag('triangle.png', :class => 'triangle')
-          .extra
-            - if comment.target.class == Project
-              = convert_comment_link(comment)
-            - if comment.can_edit?(current_user)
-              = edit_comment_link(comment)
-            .tactione{:style => (comment.can_edit?(current_user) ? 'display:none' : nil)}
-              = t('.cannot_edit')
-            - if comment.can_destroy?(current_user)
-              = delete_comment_link(comment)
+      - unless request.format == 'rss'
+        .actions_menu
+          %span.actiondate= posted_date comment.created_at
+          %span.loading{:style => 'display:none'}= "Loading..."
+          - if comment.can_modify?(current_user, false)
+            = image_tag('triangle.png', :class => 'triangle')
+            .extra
+              - if comment.target.class == Project
+                = convert_comment_link(comment)
+              - if comment.can_edit?(current_user)
+                = edit_comment_link(comment)
+              .tactione{:style => (comment.can_edit?(current_user) ? 'display:none' : nil)}
+                = t('.cannot_edit')
+              - if comment.can_destroy?(current_user)
+                = delete_comment_link(comment)
       .name
         = conversation_last_comment_text(comment)
         = activity_comment_user_link(comment)
