--- a/app/views/activities/_create_task_list.haml
+++ b/app/views/activities/_create_task_list.haml
@@ -1,10 +1,2 @@
-.activity{ :class => "#{activity.action_type}" }
-  .activity_icon{ :class => "activity_#{activity.target_type.to_s.underscore}" }
-  = link_to activity.user.name, user_path(activity.user)
-  = t(".#{activity.action_type}")
-  = activity_project_link(activity.project,:after)
-  = link_to task_list, project_task_list_path(task_list.project, task_list)
-  - unless rendering_rss?
-    .date
-      = posted_date activity.posted_date
-  .clear
+- activity_section(activity) do |title|
+  %p= title
