--- a/app/views/activities/_edit_note.haml
+++ b/app/views/activities/_edit_note.haml
@@ -1,14 +1,2 @@
-.activity{ :class => "activity_#{activity.action_type}" }
-  .activity_icon{ :class => "activity_#{activity.target_type.to_s.underscore}" }
-  %span.name
-    = activity.user.name
-  = t(".#{activity.action_type}")
-  = activity_project_link(activity.project,:after) unless location_name?('show_projects')
-  - target_page = Page.find_with_deleted(note.page_id)
-  = link_to target_page, (target_page.deleted? ? '#' : project_page_path(activity.project, target_page))
-  &rarr;
-  = note
-  - unless rendering_rss?
-    .date
-      = posted_date activity.posted_date
-  .clear
+- activity_section(activity) do |title|
+  %p= title
