--- a/app/views/activities/_edit_page.haml
+++ b/app/views/activities/_edit_page.haml
@@ -1,11 +1,2 @@
-.activity{ :class => "#{activity.action_type}" }
-  .activity_icon{ :class => "activity_#{activity.target_type.to_s.underscore}" }
-  %span.name
-    = activity.user.name
-  = t(".#{activity.action_type}")
-  = activity_project_link(activity.project,:after) unless location_name?('show_projects')
-  = link_to page, (page.deleted? ? '#' : project_page_path(page.project, page))
-  - unless rendering_rss?
-    .date
-      = posted_date activity.posted_date
-  .clear
+- activity_section(activity) do |title|
+  %p= title
