--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -3,7 +3,7 @@
     .info
       = thumb_avatar(comment.user)
     .block
-      - unless request.format == 'rss'
+      - unless rss?
         .actions_menu
           %span.actiondate= posted_date comment.created_at
           %span.loading{:style => 'display:none'}= "Loading..."
@@ -19,11 +19,9 @@
               - if comment.can_destroy?(current_user)
                 = delete_comment_link(comment)
       .name
-        = conversation_last_comment_text(comment)
-        = activity_comment_user_link(comment)
-        = activity_project_link(comment.project)
-        = activity_comment_target_link(comment)
-        = comment_task_status(comment) if comment.target_type == 'Task'
+        = activity_title(comment)
+        - if comment.target_type == 'Task'
+          = comment_task_status(comment) 
         - if comment.hours?
           %span.hours
             = friendly_hours_value(comment.hours)
