--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,7 +4,7 @@
     %meta{ 'http-equiv' => "content-type", :content => "text/html;charset=utf-8" }
     - if current_user
       %meta{ :name => 'current-username', :content => current_user.login }
-    %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" }
+    %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
     %title
       = @page_title
       Teambox
