rewrite global navigation in Haml, make username link to public user profile

--- a/app/styles/_navigation.sass
+++ b/app/styles/_navigation.sass
@@ -1,26 +1,17 @@
-div.global_navigation
+.global_navigation
   float: right
   padding: 5px
-  margin-bottom: 10px
-  ul
-    margin: 0px
-    padding: 0px
-    list-style-type: none
-    li
-      float: left
-      display: block
-      a
-        float: left
-        display: block
-        color: rgb(120, 120, 120)
-        font-size: 11px
-        margin: 0px 7px
-      a:hover,a.active
-        color: rgb(90, 158, 167)
-      a.active
-        font-weight: bold
-    li.right_side
-      float: right
+  margin-bottom: 0 0 10px 0
+  list-style-type: none
+  font-size: 11px
+  li
+    display: inline
+    margin: 0px 7px
+    a
+      color: rgb(120, 120, 120)
+    a:hover
+      color: rgb(90, 158, 167)
+
 div.navigation
   clear: both
   width: 960px
