--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,7 +19,7 @@
     = strip(@current_project)
     .container
       = header
-      = global_navigation
+      = render 'shared/global_navigation'
       - show_flash
       = navigation(@current_project,current_user.projects,current_user.recent_projects)
       .wrapper
